5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1585_2905.log
== TEST (2019-03-25 13:37:06) 
-- CODE:
from math import*
a=float(input("comprimento de a: "))
b=float(input("comprimento de b: "))
c=float(input("comprimento de c: "))
s=(a+b+c)/2
area=sqrt(s*(s-a)*(s-b)*(s-c))

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:37:40) 
-- CODE:
from math import*
a=float(input("comprimento de a: "))
b=float(input("comprimento de b: "))
c=float(input("comprimento de c: "))
s=(a+b+c)/2
area=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:38:07) 
-- CODE:
from math import*
a=float(input("comprimento de a: "))
b=float(input("comprimento de b: "))
c=float(input("comprimento de c: "))
s=(a+b+c)/2
area=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))

-- EXECUTION TIME:
0.152861
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:20:23) 
-- CODE:
math from import*
a=float(input("comprimento de A: "))
b=float(input("comprimento de B: "))
c=float(input("comprimento de C: "))
s=(a+b+c)//2
area= sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))




-- ERROR:
File "XXXX", line 1
    math from import*
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:22:07) 
-- CODE:

a=float(input("comprimento de A: "))
b=float(input("comprimento de B: "))
c=float(input("comprimento de C: "))
s=(a+b+c)//2
from math import*
area= sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))




-- OUTPUT:
49.56813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:22:55) 
-- CODE:

a=float(input("comprimento de A: "))
b=float(input("comprimento de B: "))
c=float(input("comprimento de C: "))
s=(a+b+c)/2
from math import*
area= sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))




-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:23:21) 
-- CODE:

a=float(input("comprimento de A: "))
b=float(input("comprimento de B: "))
c=float(input("comprimento de C: "))
s=(a+b+c)/2
from math import*
area= sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))




-- EXECUTION TIME:
0.142669
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
